feat: Add tool preparation script for architecture-specific resources
- Introduced `prepare-tools.py` to download and verify architecture-specific tools for Maven resources.
- Implemented SHA-256 checksum verification for downloaded archives.
- Enhanced error handling for offline mode and missing archives.

fix: Update application versioning and improve activation logic

- Changed versioning logic in `MainApplicationJavaGi` to use implementation version if available.
- Improved activation logic to handle reactivation of the main window.

refactor: Optimize file handling and UI updates in MainWindowJavaGi

- Introduced asynchronous file addition with background processing to prevent UI blocking.
- Enhanced file admission logic to manage shutdown states effectively.
- Updated UI components to reflect available conversion categories based on tool availability.

chore: Expand codec options and improve settings management

- Added new audio and video codecs in `SettingsDialogJavaGi`.
- Improved handling of audio sample rates and channels with dedicated arrays.
- Refactored document settings management for better clarity and maintainability.

test: Implement native feature workflow tests

- Created `NativeFeatureWorkflowTest` to validate the integration of GTK widgets and application state.
- Ensured that presets and window states persist through native workflows.

build: Configure build directory in pom.xml

- Set custom build directory in `pom.xml` for better organization of build artifacts.